<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="Home" />

    <item
        android:id="@+id/trendingFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="Trending" />

    <item
        android:id="@+id/promptFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="Prompts" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="Profile" />
</menu>
