...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reset Password"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:layout_marginTop="12dp" />

    </LinearLayout>
...
